[gd_scene load_steps=4 format=3 uid="uid://bjfpp877mi4wy"]

[ext_resource type="Script" path="res://scenes/game_objects/item/item_tile.gd" id="1_drqr3"]
[ext_resource type="Texture2D" uid="uid://5rnsjyutmuk6" path="res://scenes/game_objects/item/tile_placeholder.png" id="1_fyur5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a810v"]
size = Vector2(64, 64)

[node name="item_tile" type="Node2D"]
script = ExtResource("1_drqr3")

[node name="TilePlaceholder" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("1_fyur5")

[node name="Area2D" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_a810v")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
